# comp

./: .env.example  .gitignore  BOOTSTRAP_READY_REPORT.md  BOOTSTRAP_SUCCESS_REPORT.md  COMP_ENGINE_ANALYSIS_REPORT.md  COMP_ENGINE_INSPECTION_REPORT.md  COMP_ENGINE_SUCCESS_REPORT.md  COMP_ULTIMATE_UPGRADE_PLAN.md  DEPLOYMENT_STATUS.md  Dockerfile  GITHUB_PUSH_GUIDE.md  GIT_PUSH_SUCCESS.md  IMPLEMENTATION_STATUS_UPDATE.md  QUICKSTART_GUIDE.md  RATING_SYSTEM_REPORT.md  README.md  boostsrap_log.md  bootstrap_all_sectors.md  bootstrap_checkpoint.json  bootstrap_comp_engine.py  calculate_all_ratios_fast.py  calculate_benchmarks_sync.py  calculate_ratios_sql.py  calculate_ratios_sync.py  check_benchmarks_table.py  check_database.py  check_garan_data.py  check_garan_metadata.py  check_item_codes.py  check_sectors.py  create_score_tables.py  debug_fetch_insert.py  debug_ratio_calculation.py  fix_bank_financial_groups.py  hissepro_temel_analiz_ozet.md  inspect_comp_engine.py  main.py  mali_tablo_sistemi_talimat.md  malitablo.garan.xlsx  pyproject.toml  (+8 more)
.kiro/specs/production-ready-fundamental-api/: .config.kiro  requirements.md
core/: __init__.py  cache.py  config.py  database.py
models/: __init__.py  benchmark.py  company.py  financial.py  score.py
routers/: __init__.py  admin.py  ai_analysis.py  ai_context.py  claude-rating-notlar.md  companies.py  scores.py  sectors.py
services/: __init__.py  ai_context_builder.py  comparison_service.py  fundamental_report.py  isyatirim_client.py  item_code_mapper.py  ratio_calculator.py  scheduler.py  sector_benchmarks.py  trend_analysis.py
services/scoring/: __init__.py  engine.py  pillar_config.py  ratio_scorer.py  worker.py
